--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -177,7 +177,7 @@ song_9 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴅᴏᴡɴʟᴏᴀᴅ sᴏɴɢ ꜰʀᴏᴍ ʏ
 song_10 : "ꜰᴀɪʟᴇᴅ ᴛᴏ ᴜᴘʟᴏᴀᴅ ᴏɴ ᴛᴇʟᴇɢʀᴀᴍ sᴇʀᴠᴇʀs."
 song_11 : "ᴜᴘʟᴏᴀᴅɪɴɢ sᴛᴀʀᴛᴇᴅ ʙᴀʙʏ\n\nᴘʟᴇᴀsᴇ ʜᴏʟᴅ ᴏɴ..."
 
-play_1 : "✨ 𝑷𝒓𝒐𝒄𝒆𝒔𝒔𝒊𝒏𝒈....🥀"
+play_1 : "𝐑ᴜᴋᴏ 𝐉ᴀʀᴀ 𝐒ᴀʙʀ 𝐊ᴀʀᴏ ..🥀💣"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -212,7 +212,8 @@ ping_2 : "🏓 ᴩᴏɴɢ : <code>{0}ᴍs</code>\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛ
 queue_1 : "» ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "» ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>» ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}\n\n‣ Tɪᴛʟᴇ :</b> {1}\n<b>‣ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>‣ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}"
+queue_4 : "<b><blockquote>⏤‌‌●  ᴀᴅᴅєᴅ ᴛᴏ ǫᴜєᴜє ᴀᴛ #{0}</blockquote>\n<blockquote>❍ ᴛɪᴛʟє :</b> {1}\n<b>❍ ᴅᴜʀᴧᴛɪση :</b> {2} ϻɪηᴜᴛєѕ\n<b>❍ ʙʏ :</b> {3}</blockquote>\n<blockquote><b>❍ ᴊᴏɪη  ➛  @THUNDERDEVS</b></blockquote>"
+
 queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
@@ -251,36 +252,36 @@ SG_B_2 : "🎧 ᴀᴜᴅɪᴏ 🎧"
 SG_B_3 : "🎥 ᴠɪᴅᴇᴏ 🎥"
 
 # Start
-S_B_1 : "🥀 ᴀᴅᴅ ᴍᴇ 🥀"
-S_B_2 : "🥀 sᴜᴘᴘᴏʀᴛ 🥀"
-S_B_3 : "➕ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ ➕"
-S_B_4 : "🥀 ʜᴇʟᴘ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅ 🥀"
-S_B_5 : "🥀 ᴏᴡɴᴇʀ 🥀"
-S_B_6 : "🥀 ᴄʜᴀɴɴᴇʟ 🥀"
-S_B_7 : "🥀 sᴏᴜʀᴄᴇ 🥀"
-S_B_8 : "🥀 ʏᴏᴜᴛᴜʙᴇ 🥀"
-S_B_9 : "🥀 sᴜᴩᴩᴏʀᴛ 🥀"
+S_B_1 : "⌯ ʌᴅᴅ ϻє вᴧʙʏ ⌯"
+S_B_2 : "˹ sυᴘᴘσʀᴛ ˼"
+S_B_3 : "✙ ʌᴅᴅ ϻє ɪη ʏσυʀ ɢʀσυᴘ ✙"
+S_B_4 : "˹ ʜєʟᴘ ᴧηᴅ ᴄσϻϻᴧηᴅs ˼"
+S_B_5 : "˹ ❍ᴡηєʀ ˼"
+S_B_6 : "˹ υᴘᴅᴧᴛєs ˼"
+S_B_7 : "˹ ʀєᴘσ ˼"
+S_B_8 : "˹ ʏσυᴛυʙє ˼"
+S_B_9 : "˹ sυᴘᴘσʀᴛ ˼"
 
-H_B_1 : "Aᴅᴍɪɴ"
-H_B_2 : "Aᴜᴛʜ"
-H_B_3 : "Bʀᴏᴀᴅᴄᴀsᴛ"
-H_B_4 : "Bʟ-Cʜᴀᴛ"
-H_B_5 : "Bʟ-Usᴇʀ"
-H_B_6 : "C-Pʟᴀʏ"
-H_B_7 : "G-Bᴀɴ"
-H_B_8 : "Lᴏᴏᴘ"
-H_B_9 : "Mᴀɪɴᴛᴇɴᴀɴᴄᴇ"
-H_B_10 : "Pɪɴɢ"
-H_B_11 : "Pʟᴀʏ"
-H_B_12 : "Sʜᴜғғʟᴇ"
-H_B_13 : "Sᴇᴇᴋ"
-H_B_14 : "Sᴏɴɢ"
-H_B_15 : "Sᴘᴇᴇᴅ"
+H_B_1 : "ᴀᴅᴍɪɴ"
+H_B_2 : "ᴀᴜᴛʜ"
+H_B_3 : "ɢ-ᴄᴀsᴛ"
+H_B_4 : "ʙʟ-ᴄʜᴀᴛ"
+H_B_5 : "ʙʟ-ᴜsᴇʀ"
+H_B_6 : "ᴄ-ᴘʟᴀʏ"
+H_B_7 : "ɢ-ʙᴀɴ"
+H_B_8 : "ʟᴏᴏᴘ"
+H_B_9 : "ʟᴏɢ"
+H_B_10 : "ᴘɪɴɢ"
+H_B_11 : "ᴘʟᴀʏ"
+H_B_12 : "sʜᴜғғʟᴇ"
+H_B_13 : "sᴇᴇᴋ"
+H_B_14 : "sᴏɴɢ"
+H_B_15 : "sᴘᴇᴇᴅ"
 H_B_16 : "ɢᴘᴛ"
-H_B_17 : "Rᴇᴇʟ"
+H_B_17 : "sᴛɪᴄᴋᴇʀ"
 H_B_18 : "ᴛᴀɢ-ᴀʟʟ"
 H_B_19 : "ɪɴғᴏ"
-H_B_20 : "Hɪsᴛᴏʀʏ"
+H_B_20 : "ɢʀᴏᴜᴘ"
 H_B_21 : "ᴇxᴛʀᴀ"
 H_B_22 : "ɪᴍᴀɢᴇ"
 H_B_23 : "ᴀᴄᴛɪᴏɴ"
